--- a/bloctrader/bloctrader.csproj
+++ b/bloctrader/bloctrader.csproj
@@ -20,6 +20,16 @@
     <Content Remove="ClientApp\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\app\bittrex\bittrex.service.ts" />
+    <None Remove="ClientApp\app\i18n\i18n.provider.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\bittrex\bittrex.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\i18n\i18n.provider.ts" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
